# stuiplot

./: README.md  pyproject.toml
truhanen/stuiplot/: __init__.py  stuiplot.py
